# moldable

./: .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  turbo.json
.changeset/: README.md  config.json  few-monkeys-shake.md  sunny-sides-sip.md
.github/workflows/: release-desktop.yml  release-packages.yml
desktop/: .gitignore  CHANGELOG.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts  vite-plugin-manual-reload.ts  vite.config.ts  vitest.config.ts
desktop/resources/app-template/: .gitignore  moldable.json  package.json  tsconfig.json
desktop/scripts/: clean.js
desktop/src/: app.tsx  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.mac.plist  tauri.conf.json
desktop/src-tauri/audio-capture/: .gitignore  Package.swift
desktop/src-tauri/audio-capture-stub/src/: index.ts
desktop/src-tauri/audio-capture/Sources/: main.swift
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/resources/codemods/: 001-resolve-next-path.mjs  runner.mjs
desktop/src-tauri/src/: ai_server.rs  api_server.rs  apps.rs  audio.rs  checkpoints.rs  codemods.rs  conversations.rs  env.rs  gateway.rs  gateway_events.rs  install_state.rs  lib.rs  logs.rs  main.rs  paths.rs  ports.rs  preferences.rs  process.rs  registry.rs  runtime.rs  sidecar.rs  tests.rs  types.rs  workspace.rs
desktop/src/components/: add-app-dialog.tsx  agent-sessions-dialog.tsx  agent-sessions-panel.tsx  api-key-dialog.tsx  api-key-settings-dialog.tsx  app-env-dialog.tsx  app-logs.tsx  app-update-dialog.tsx  app-view.tsx  canvas.tsx  chat-container.tsx  delete-workspace-dialog.tsx  developer-tools-dialog.tsx  empty-state-apps.tsx  global-command-menu.tsx  mcp-settings-dialog.tsx  onboarding-api-key.tsx  onboarding-dependencies.tsx  onboarding-dialog.tsx  onboarding-gateway.tsx  onboarding-starter-apps.tsx  onboarding-workspace.tsx  onboarding.tsx  pairing-modal.tsx  port-conflict-dialog.tsx  settings-api-keys.tsx  settings-developer.tsx  settings-dialog.tsx  settings-gateway.tsx  settings-general.tsx  settings-logs.tsx  settings-mcp.tsx  settings-security.tsx  settings-skills.tsx  sidebar.tsx  system-logs.tsx  update-notification.tsx  vendor-logo.tsx  widget-card.tsx  workspace-dialog.tsx  (+1 more)
desktop/src/hooks/: use-ai-server-health.ts  use-app-status.ts  use-app-update.ts  use-chat-conversations.ts  use-checkpoints.ts  use-gateway-sessions.ts  use-hot-reload-notification.ts  use-moldable-chat.ts  use-moldable-config.ts  use-moldable-preferences.ts  use-workspace-config.ts  use-workspaces.ts
desktop/src/lib/: app-manager.ts  (+5 more)
prds/: agents-subagents.prd.md  ai-server-gateway-integration.prd.md  app-commands.prd.md  app-installs.prd.md  app-updates-structure.prd.md  apps-architecture-options.prd.md  chat-compaction.prd.md  checkpoints.prd.md  cron-scheduled-jobs.prd.md  cross-platform.prd.md  dependency-runtime.prd.md  filesystem-first-persistence.prd.md  gateway-onboarding-issues.prd.md  gateway.prd.md  initial-app-ideas.prd.md  moldable-code.prd.md  moldable.prd.md  releases.prd.md  skills.prd.md  system-audio.prd.md  tools.prd.md  webkit-iframe-loading.prd.md
scripts/: build-ai-server.js  build-audio-capture.js  build-gateway.js  clean-root.js  download-node-runtime.js  install-desktop.js  release-desktop.js  setup-cli-tools.js  stash-moldable-data.js  sync-agent-skills.js
(+8 files in other folders)
