[package]
name = "Moldable"
version = "0.1.3"
description = "Your Personal Software Factory"
authors = ["you"]
edition = "2021"

[lib]
name = "moldable_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "time"] }
regex = "1"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
chrono = { version = "0.4", features = ["serde"] }
# For fetching app registry and downloading apps from GitHub
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
zip = "2"
# For decoding PNG icon for About dialog
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
